<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black" >

    <RelativeLayout
        android:id="@+id/rLayLogsMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/rLayLogsLifetimeHeader"
            android:layout_width="fill_parent"
            android:layout_height="72dp"
            android:background="@drawable/rounded_shape_blue"
            android:padding="12dp" >

            <TextView
                android:id="@+id/tvLifetimeDeclinedCalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:alpha=".6"
                android:text="@string/label_auto_declined_calls"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvLifetimeRepliedTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:alpha=".6"
                android:text="@string/label_auto_replied_texts"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvLifetimeDeclinedCallsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvLifetimeDeclinedCalls"
                android:layout_alignParentLeft="true"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="29sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvLifetimeRepliedTextsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tvLifetimeRepliedTexts"
                android:layout_alignParentRight="true"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:text="00"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="29sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/ScrollViewLogs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rLayLogsLifetimeHeader"
            android:layout_marginTop="12dp"
            android:alpha=".75"
            android:animateLayoutChanges="true" >

            <TextView
                android:id="@+id/tvAllLogs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/theme_blue" />
        </ScrollView>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgVBottomLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/logo_lives_saved_small"
        android:contentDescription="@string/logs" />

</RelativeLayout>